r57 - may, 21, 2009
	* settings.yml : default value of 'users_by_page' has been set to 20
	* Activite : showSuccess.php > enhanced appearance
	* Activite : actions > new function compare_money_entries();
	* DepensePeer : new method doSelectForActiviteId()
	* RecettePeer : new method doSelectForActiviteId()  
	* Activite : new feature > we can see the list of Depense / Recette for a
	  specific Activite
	

r56 - may, 21, 2009
	* /lib/validator/sfValidatorCustomUnique.php : new file
	* StatutForm.class.php : validation is done using new CustomUnique validator
	* CompteForm.class.php : validation is done using new CustomUnique validator
	* ActiviteForm.class.php : validation is done using new CustomUnique
	  validator
	* Fixed issue #13 (Duplicate entries)
	* Fixed issue #12 (Duplicate entries)
	* ActiviteForm.class.php : setting of default value for field 
	  'mis_a_jour_par' has been removed (useless because already present in
	  action class)
	

r55 - may, 17, 2009
    * CotisationPeer.php : doSeletSumForAccountId() > fixed bug in computation.
      Uses the new amount field in Cotisation table, and GROUP BY clause has
      been added


r54 - may, 17, 2009
    * /lib/validator/sfValidatorAmount.class.php : new file. This validates
      amount with French decimal separator (comma)
    * DepenseForm.class.php : now uses our new amount validator
    * RecetteForm.class.php : now uses our new amount validator
    * CotisationForm.class.php : now uses our new amount validator
    * Cotisation : actions > we show the form to add - again - a new Cotisation
      and we display a notice message after user clicking on submit button
    * Cotisation : _form > new 'Liste' button to go back to the list
    * CotisationPeer.php : computation of SUM is up to date


r53 - may, 15, 2009
    * Recette : indexSucces.php > images got 'alt' attributes
    * Depense : indexSucces.php > images got 'alt' attributes
    * CotisationType : indexSucces.php > images got 'alt' attributes